# bip-tools

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: commit-msg  pre-commit  pre-push
.github/workflows/: build.yml  coverage.yml  release.yml
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
src/: lib.rs  main.rs  utils.rs
tests/: bip32_vectors.rs  bip44_vectors.rs
