[package]
name = "bip-tools"
version = "0.1.1"
authors = ["Yigit Gurbulak, yigitgurbulak4@gmail.com"]
edition = "2021"
description = "A simple command-line tool to derive Bitcoin addresses from an extended public key"

[[bin]]
name = "bip-tools"
path = "src/main.rs"

[package.metadata.llvm-cov]
output-dir = "coverage"
html = true

[dependencies]
secp256k1 = "0.27"
hmac = "0.12"
sha2 = "0.10"
ripemd = "0.1"
base58 = "0.2"
clap = { version = "4.5.16", features = ["derive"] }

[package.metadata.bin]
commitlint-rs = { version = "0.1.11", bins = ["commitlint"] }
